; ModuleID = '/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_luajit.c_l_message.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luajit-2.1.0b3/src/extr_luajit.c_l_message.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@stderr = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*)* @l_message to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @l_message(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %5 = load i8*, i8** %3, align 8
  %6 = icmp ne i8* %5, null
  br i1 %6, label %7, label %15

7:                                                ; preds = %2
  %8 = load i8*, i8** %3, align 8
  %9 = load i32, i32* @stderr, align 4
  %10 = call i32 @fputs(i8* %8, i32 %9)
  %11 = load i32, i32* @stderr, align 4
  %12 = call i32 @fputc(i8 signext 58, i32 %11)
  %13 = load i32, i32* @stderr, align 4
  %14 = call i32 @fputc(i8 signext 32, i32 %13)
  br label %15

15:                                               ; preds = %7, %2
  %16 = load i8*, i8** %4, align 8
  %17 = load i32, i32* @stderr, align 4
  %18 = call i32 @fputs(i8* %16, i32 %17)
  %19 = load i32, i32* @stderr, align 4
  %20 = call i32 @fputc(i8 signext 10, i32 %19)
  %21 = load i32, i32* @stderr, align 4
  %22 = call i32 @fflush(i32 %21)
  ret void
}

declare dso_local i32 @fputs(i8*, i32) #1

declare dso_local i32 @fputc(i8 signext, i32) #1

declare dso_local i32 @fflush(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
